Add key-value pair to JSON in Index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <form id="myForm">
-        <input type="checkbox" id="" value="">Python<br>        <input type="checkbox" id="7c5p134g" value="7c5p134g">Python2<br>
+        <input type="checkbox" id="zcd9h17m" value="zcd9h17m">Python 3.8.5<br>
+
         <input type="submit" value="提交">
     </form>
 
