Add key-value pair to JSON in Index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <form id="myForm">
         <input type="checkbox" id="zcd9h17m" value="zcd9h17m">Python 3.8.5<br>
+        <input type="checkbox" id="tttlehtv" value="tttlehtv">pyinstalltest<br>
 
         <input type="submit" value="提交">
     </form>
