Add key-value pair to JSON in Index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
+    <h1>请选择您要部署的软件，然后按提交键</h1>
+    <a>下载安装配置后，请将里面的内容复制到</a>
     <form id="myForm">
         <input type="checkbox" id="zcd9h17m" value="zcd9h17m">Python 3.8.5<br>
         <input type="checkbox" id="tttlehtv" value="tttlehtv">pyinstalltest<br>
+        <input type="checkbox" id="bs1djlqb" value="bs1djlqb">bb<br>
 
         <input type="submit" value="提交">
     </form>
