Add key-value pair to JSON in Index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <input type="checkbox" id="zcd9h17m" value="zcd9h17m">Python 3.8.5<br>
         <input type="checkbox" id="tttlehtv" value="tttlehtv">pyinstalltest<br>
         <input type="checkbox" id="bs1djlqb" value="bs1djlqb">bb<br>
+        <input type="checkbox" id="7kry30ls" value="7kry30ls">888<br>
 
         <input type="submit" value="提交">
     </form>
