Add key-value pair to JSON in Index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-height=1.0">
-    <title>Checkbox to JSON and Download</title>
+    <title>软件部署选择工具</title>
 </head>
 
 <body>
@@ -15,6 +15,7 @@
         <input type="checkbox" id="tttlehtv" value="tttlehtv">pyinstalltest<br>
         <input type="checkbox" id="bs1djlqb" value="bs1djlqb">bb<br>
         <input type="checkbox" id="7kry30ls" value="7kry30ls">888<br>
+        <input type="checkbox" id="n5cmwwpf" value="n5cmwwpf">testy<br>
 
         <input type="submit" value="提交">
     </form>
